Use correct PipelineRun URL in status table for OpenShift
The status table added to the pull request after pipelineruns have completed,
includes a link to the pipelinerun from the table. On openshift this link
does not appear to be obtaining the correct route - this change uses the
internal dashboard service rather than the https dashboard service to exploit
using the endpoint REST endpoint to get the correct external route to the
dashboard.

--- a/webhooks-extension/config/task-monitor-result.yaml
+++ b/webhooks-extension/config/task-monitor-result.yaml
@@ -96,7 +96,7 @@ spec:
               pr = pr.strip()
               namespace = namespace.strip()
               pipeline = pipeline.strip()
-              link = pipelineRunURLPrefix + "/#namespaces/" + namespace + "/pipelines/" + pipeline + "/runs/" + pr
+              link = pipelineRunURLPrefix + "/#/namespaces/" + namespace + "/pipelines/" + pipeline + "/runs/" + pr
               print("Checking pipelinerun " + pr + " in namespace " + namespace)
               output = api_instance.get_namespaced_custom_object("tekton.dev", "v1alpha1", namespace, "pipelineruns", pr)
               if output["status"]["conditions"][0]["status"] == u'True' and output["status"]["conditions"][0]["type"] == u'Succeeded':
@@ -125,7 +125,7 @@ spec:
           namespace = namespace.strip()
           pipeline = pipeline.strip()
           print("Still Running - pipelinerun " + pr + " in namespace " + namespace)
-          link = pipelineRunURLPrefix + "/#namespaces/" + namespace + "/pipelines/" + pipeline + "/runs/" + pr
+          link = pipelineRunURLPrefix + "/#/namespaces/" + namespace + "/pipelines/" + pipeline + "/runs/" + pr
           runsIncomplete.append("[**??????**](" + link + ") | " + pipeline + " | " + pr + " | " + namespace)
       results = runsPassed + runsFailed + runsIncomplete
       comment = ("## Tekton Status Report \n\n"
