--- a/webhooks-extension/config/release/openshift-tekton-webhooks-extension.yaml
+++ b/webhooks-extension/config/release/openshift-tekton-webhooks-extension.yaml
@@ -230,6 +230,8 @@ spec:
           value: tekton-pipelines
         - name: SERVICEACCOUNT
           value: tekton-webhooks-extension
+        - name: PLATFORM
+          value: openshift
         image: "gcr.io/tekton-nightly/sink:latest"
         imagePullPolicy: Always
         livenessProbe:
@@ -341,7 +343,7 @@ spec:
               pr = pr.strip()
               namespace = namespace.strip()
               pipeline = pipeline.strip()
-              link = pipelineRunURLPrefix + "/#namespaces/" + namespace + "/pipelines/" + pipeline + "/runs/" + pr
+              link = pipelineRunURLPrefix + "/#/namespaces/" + namespace + "/pipelines/" + pipeline + "/runs/" + pr
               print("Checking pipelinerun " + pr + " in namespace " + namespace)
               output = api_instance.get_namespaced_custom_object("tekton.dev", "v1alpha1", namespace, "pipelineruns", pr)
               if output["status"]["conditions"][0]["status"] == u'True' and output["status"]["conditions"][0]["type"] == u'Succeeded':
@@ -370,7 +372,7 @@ spec:
           namespace = namespace.strip()
           pipeline = pipeline.strip()
           print("Still Running - pipelinerun " + pr + " in namespace " + namespace)
-          link = pipelineRunURLPrefix + "/#namespaces/" + namespace + "/pipelines/" + pipeline + "/runs/" + pr
+          link = pipelineRunURLPrefix + "/#/namespaces/" + namespace + "/pipelines/" + pipeline + "/runs/" + pr
           runsIncomplete.append("[**??????**](" + link + ") | " + pipeline + " | " + pr + " | " + namespace)
       results = runsPassed + runsFailed + runsIncomplete
       comment = ("## Tekton Status Report \n\n"
